--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,10 +11,12 @@
   "license": "Apache-2.0",
   "description": "Phonebook backend",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "nodemon": "^3.1.9"
   }
 }
