--- a/part7/bloglist-frontend/package.json
+++ b/part7/bloglist-frontend/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run",
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
@@ -31,6 +33,7 @@
     "cypress": "^14.0.1",
     "eslint": "^8.45.0",
     "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
