--- a/part8/package.json
+++ b/part8/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "graphql": "^16.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.1.0"
   }
 }
