--- a/part8/8a/package.json
+++ b/part8/8a/package.json
@@ -11,7 +11,10 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
+    "mongoose": "^7.8.6",
+    "mongoose-unique-validator": "^4.0.1",
     "nodemon": "^3.1.9",
     "uuid": "^11.1.0"
   }
