--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,12 +11,18 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "@graphql-tools/schema": "^10.0.23",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.6",
     "mongoose-unique-validator": "^4.0.1",
     "nodemon": "^3.1.9",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   }
 }
