--- a/part9/package.json
+++ b/part9/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "calculateBmi": "ts-node bmiCalculator.ts",
     "ts-node": "ts-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.15.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
