--- a/part9/patientor_backend/package.json
+++ b/part9/patientor_backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",    
+    "dev": "ts-node-dev index.ts",
     "lint": "eslint .",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/cors": "^2.8.18",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.1",
     "eslint": "^9.25.1",
@@ -23,6 +24,7 @@
     "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
