--- a/part12/part12-containers-applications/my-app/bloglist-backend/package.json
+++ b/part12/part12-containers-applications/my-app/bloglist-backend/package.json
@@ -8,7 +8,7 @@
     "start_windows": "cross-env NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
-    "start:test": "cross-env NODE_ENV=test nodemon index.js",
+    "start:test": "NODE_ENV=test nodemon index.js",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
